--- a/css/core.css
+++ b/css/core.css
@@ -68,3 +68,19 @@
 	text-align: center;
 	padding-top: 10rem;
 }
+.canary {
+	display: block;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	text-align: center;
+}
+.canary ul {
+	padding: 0;
+	margin: 0;
+	text-align: left;
+}
+
+.canary li {
+	padding-top: 0;
+}
