--- a/src/css/core.css
+++ b/src/css/core.css
@@ -2,10 +2,14 @@
 	:root {
 		--black: #000000FF;
 		--white: #ffffff;
-		--grey: #8f8e8e;
+		--text: #cdd6f4;
+		--background: #1e1e2e;
+		--pink: #f5c2e7;
+		--sapphire: #74c7ec;
+		--green: #a6e3a1;
 		--main: "Montserrat", sans-serif;
 		--heading: "EB Garamond", serif;
-		--base-size: 1.167rem;
+		--base-size: 1rem;
 		--scale: 1.2;
 		--h1: calc(var(--h2) * var(--scale));
 		--h2: calc(var(--h3) * var(--scale));
@@ -20,13 +24,13 @@
 		padding: 0;
 		font-size: var(--base-size);
 		line-height: 1.5;
-		background-color: var(--black);
+		background-color: var(--background);
 	}
 	p {
-		color: var(--white);
+		color: var(--text);
 	}
 	ul {
-		color: var(--white);
+		color: var(--text);
 		list-style-type: none;
 	}
 	li {
@@ -39,8 +43,7 @@
 	h5,
 	h6 {
 		font-family: var(--heading);
-		text-transform: uppercase;
-		color: var(--white);
+		color: var(--text);
 	}
 	h1 {
 		font-size: var(--h1);
@@ -60,27 +63,15 @@
 	h6 {
 		font-size: var(--h6);
 	}
-}
-.under-construction {
-	display: block;
-	margin: 0 auto;
-	width: 100%;
-	text-align: center;
-	padding-top: 10rem;
-}
-.canary {
-	display: block;
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	text-align: center;
-}
-.canary ul {
-	padding: 0;
-	margin: 0;
-	text-align: left;
-}
-
-.canary li {
-	padding-top: 0;
+	a {
+		color: var(--pink);
+		text-decoration: underline;
+	}
+	a:hover {
+		color: var(--sapphire);
+		text-decoration: none;
+	}
+	a:visited {
+		color: var(--green);
+	}
 }
